<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoMonkey</string>
    <string name="welcome_text">Welcome to Go! Monkey</string>
    <string name="copyright">\u00A9 BadMonkeyStudios</string>
    <string name="button_start">Play</string>
    <string name="button_about">About</string>
    <string name="button_credits">Credits</string>
    <string name="credits">Idea: Lorenz Kleissner Programming: Lorenz Kleissner &amp; Simon Sölder Music: Simon Sölder Thanks to: Harald Pietersteiner \u00A9 2013 BadMonkeyStudios</string>
        
</resources>