<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:text="@string/welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/brown" />





    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/welcome_message"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/welcome_message"
        android:background="@drawable/button_menu"
        android:text="@string/button_start" />





    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/button_start"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_start"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_menu"
        android:text="@string/button_about" />







    <Button
        android:id="@+id/button_credits"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/button_about"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_about"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_menu"
        android:text="@string/button_credits" />

</RelativeLayout>